--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "@next/font": "^13.1.0",
+    "@radix-ui/react-popover": "1.0.2",
+    "@radix-ui/react-tooltip": "1.0.2",
     "clsx": "^1.2.1",
+    "inspx": "^0.0.1-alpha.6",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
