Implement color wheel component and polish toolbar

--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
   },
   "dependencies": {
     "@next/font": "^13.1.0",
-    "@radix-ui/react-popover": "1.0.2",
+    "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-tooltip": "1.0.2",
     "clsx": "^1.2.1",
     "inspx": "^0.0.1-alpha.6",
     "next": "latest",
     "react": "18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "use-debounce": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
