--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-idle-timer": "^5.4.2",
     "use-debounce": "^9.0.2"
   },
   "devDependencies": {
